Speed up the sbt plugin scripted tests (#814)